--- a/app/src/main/res/layout/product_details_content.xml
+++ b/app/src/main/res/layout/product_details_content.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_regular"
         android:layout_marginEnd="@dimen/margin_regular"
-        android:text="MSI GeForce RTX 3090 GAMING X TRIO 24GB GDDR6X"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/details_image" />
@@ -58,8 +57,7 @@
             android:id="@+id/details_price"
             style="@style/ProductPriceBigStyle"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="8099,00" />
+            android:layout_height="match_parent" />
 
         <Spinner
             android:id="@+id/currency_spinner"
