--- a/app/src/main/res/layout/fragment_list_item_product.xml
+++ b/app/src/main/res/layout/fragment_list_item_product.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="start" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_marginTop="@dimen/margin_big"
@@ -46,8 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_small"
                 android:layout_marginBottom="@dimen/margin_big" />
-
-            <!-- TODO: Sometimes this aligns to the right and sometimes not wtf -->
+            
             <TextView
                 style="@style/ProductPriceSmallStyle"
                 android:id="@+id/product_price"
