--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/order_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_regular"
-        app:layout_constraintBottom_toTopOf="@+id/order_content"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_marginBottom="@dimen/margin_regular" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/order_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="150dp"
-        android:padding="@dimen/margin_small"
-        android:background="#DDD"
-        app:layout_constraintTop_toBottomOf="@id/order_recyclerview"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/big_list_padding"
+        android:padding="@dimen/margin_small">
 
         <TextView
             android:id="@+id/order_sum"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Wartość produktów: 2000 zł"/>
+            android:layout_above="@+id/order_button"
+            android:text="Wartość produktów: 2000 zł" />
         <!-- TODO: use order_total string resource here     -->
 
         <Button
             android:id="@+id/order_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:text="@string/buy_text" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
+</LinearLayout>
