--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/order_recyclerview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_regular" />
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/order_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/big_list_padding"
-        android:padding="@dimen/margin_small">
-
-        <TextView
-            android:id="@+id/order_sum"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/order_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/order_button"
-            android:text="Wartość produktów: 2000 zł" />
-        <!-- TODO: use order_total string resource here     -->
+            android:layout_marginBottom="@dimen/margin_regular" />
 
-        <Button
-            android:id="@+id/order_button"
+        <LinearLayout
+            android:id="@+id/order_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:text="@string/buy_text" />
-    </RelativeLayout>
-</LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/big_list_padding"
+            android:orientation="vertical"
+            android:padding="@dimen/margin_small">
+
+            <TextView
+                android:id="@+id/order_sum"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <Button
+                android:id="@+id/order_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buy_text" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
