--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="rating_margin_small">2dp</dimen>
     <dimen name="layout_margin_big">64dp</dimen>
     <dimen name="card_main_margin">100dp</dimen>
+    <dimen name="reviews_list_margin">300dp</dimen>
 
     <dimen name="product_name_text_size_small">14sp</dimen>
     <dimen name="product_price_text_size_small">13sp</dimen>
